tests/ui/06-query-set.stderr
error: invalid query parameter
  --> $DIR/06-query-set.rs:10:15
   |
10 |         Query<Transform, With<Foo>>,
   |               ^^^^^^^^^
   |
   = note: `Transform` is not a valid query type
   = help: if you want to query for a component, use `&Transform` or `&mut Transform`
